# src/models/user.model.ts
@@ -1,25 +1,21 @@
 import { Schema, model } from 'mongoose';
+import { ROLE, USER_STATUS } from '../constants/app.constant';
 
-import {  ROLE } from '../constants/app.constant';
-
-const ClientSchema = new Schema(
+const UserSchema = new Schema(
     {
-        role: { type: Number, enum: [ROLE.ADMIN, ROLE.USER], default: ROLE.USER },
-        email: { type: String, required: false, default: null },
-        firstName: { type: String, required: false, minLength: 2, default: null },
-        lastName: { type: String, required: false },
-        password: { type: String, minLength: 4, maxLength: 80, default: null },
-        phoneNumber: { type: String, required: true },
-        language: { type: String, required: false, default: null },
-        profile: { type: String, defalut: null },
-        mPinMode: { type: Boolean, defalut: false },
-        mPin: { type: String, defalut: null },
-        partnerCode: { type: String, defalut: null },
-        isBlocked: { type: Boolean, default: false },
-        // status: { type: String, enum: [USER_STATUS.PENDING, USER_STATUS.APPROVED, USER_STATUS.DECLINED], default: USER_STATUS.PENDING }
-    }, { timestamps: true, versionKey: false }
+        first_name: { type: String, default: "" },
+        last_name: { type: String, default: "" },
+        email: { type: String },
+        password: { type: String },
+        profile_pic: { type: String, default: "" },
+        user_type: { type: Number, default: ROLE.USER },
+        otp: { type: Number, default: null },
+        is_verified: { type: Boolean, default: false },
+        status: { type: Number, default: USER_STATUS.ACTIVE },
+        created_on: { type: Number, default: 0 },
+        updated_on: { type: Number, default: 0 }
+
+    },
+    // { timestamps: true, versionKey: false }
 )
-export default model('client', ClientSchema)
-
-
-
+export default model('user', UserSchema)
